Finalized the main slides.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Docker intro in &lt; 5 mins</title>
+  <title>Polymer intro</title>
   <style type="text/css">
     body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -846,7 +846,22 @@ code {
 
   </section>
   <section>
-    
+    <h3 id="results">Results</h3>
+<p>What ever, dude.. Show me some code!</p>
+
+  </section>
+  <section>
+    <h3 id="google-s-components">Google&#39;s components</h3>
+<ul>
+<li><a href="https://elements.polymer-project.org/">Polymer Catalog</a></li>
+<li>Plenty of user created exist, Google-fu.</li>
+</ul>
+
+  </section>
+  <section>
+    <h1 id="thank-you-">Thank you!</h1>
+<h2 id="questions-comments-">Questions, comments?</h2>
+
   </section>
   <section>
     <div class="author">
