Update presentation (typo fixes)

--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@ code {
 <ul>
 <li><p>The Polymer library is designed to make it easier and faster for developers to create great, reusable components for the modern web.</p>
 </li>
-<li><p>Utilizes web compoents for building elements and eventually applications.</p>
+<li><p>Utilizes web components for building elements and eventually applications.</p>
 </li>
 </ul>
 <pre><code>&lt;my-tabstrip&gt;
@@ -777,7 +777,7 @@ code {
 <ul>
 <li>With Polymer the framework is DOM.<ul>
 <li>The component model is Custom Elements.</li>
-<li>Scoping provided by Shadow DOM.</li>
+<li>Scoping provided by Shady/Shadow DOM.</li>
 </ul>
 </li>
 <li>Web components are really low-level by design.</li>
